fixed about us pics & text spacing

--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,7 @@ h4{
     width: 300px;
     padding-top: 5px;
     padding-bottom: 5px;
+    line-height: 1.5;
 }
     
 #bioSectionContain {
